--- a/src/Componnents/Card/Card.css
+++ b/src/Componnents/Card/Card.css
@@ -34,3 +34,13 @@
   font-size: 16px;
   color: #5290FD;
 }
+.c-button:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+@media screen and (max-width: 480px){
+.card{
+  width: auto;
+}
+}
