Add darkmode toggle

--- a/src/Componnents/Testimonials/Testimodial.css
+++ b/src/Componnents/Testimonials/Testimodial.css
@@ -64,6 +64,10 @@
   justify-content: center;
 }
 
+.t-wrapper .swiper-pagination-bullet{
+  background: var(--gray);
+}
+
 .t-wrapper .swiper-pagination-bullet-active{
   background: var(--orange);
 }
