add Notfound & route on & /test

--- a/src/Componnents/Navbar/Navbar.css
+++ b/src/Componnents/Navbar/Navbar.css
@@ -51,3 +51,12 @@
     display: none;
   }
 }
+
+.active {
+  color: var(--orange);
+}
+
+.active:hover {
+  cursor: pointer;
+  color: var(--orange);
+}
