--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --orange : #FCA61F;
   --black : #242D49;
   --gray : #788097;
+  --blue : #3986dd;
   --blueCard : #DDF8FE;
   --purple: rgb(238 210 255);
   --boxShadow : 0px 19px 60px rgb(0 0 0 / 8%);
@@ -23,15 +24,15 @@
   color: white;
   font-size: 16px;
   padding: 11px 26px 11px 26px;
-  background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
-  box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+  background: linear-gradient(180deg, #5aa1f1 26.71%, #235996 99.36%);
+  box-shadow: 0px 20px 24px 3px rgba(40, 149, 251, 0.42);
 }
 
 .button:hover{
   background: white;
   cursor: pointer;
-  color: var(--orange);
-  border: 1px solid var(--orange);
+  color: var(--blue);
+  border: 1px solid var(--blue);
 }
 
 @media screen and (max-width: 480px) {
