--- a/src/Componnents/Footer/Footer.css
+++ b/src/Componnents/Footer/Footer.css
@@ -5,15 +5,24 @@
   position: relative;
   margin-top: -7rem;
 }
+
+.footer img {
+  position: static;
+  object-fit: none;
+  width: 100%;
+  bottom: 0;
+  z-index: -1;
+}
+
 .f-content {
   position: absolute;
+  bottom: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  margin-top: 4rem;
-  gap: 4rem;
+  gap: .5rem;
   color: white;
 }
 .f-icons {
