--- a/src/Componnents/Intro/Intro.css
+++ b/src/Componnents/Intro/Intro.css
@@ -75,9 +75,8 @@
 }
 
 .i-right > :nth-child(2){
-  top: -4.6rem;
-  transform: scale(0.67);
-  left: -3rem;
+  top: -3.6rem;
+  left: 1rem;
   z-index: -1;
 }
 
@@ -92,6 +91,7 @@
   left: -24%;
   border-radius: 50%;
   padding: 0%;
+  cursor: pointer;
 }
 
 .blur{
