--- a/src/Componnents/Portfolio/Portfolio.css
+++ b/src/Componnents/Portfolio/Portfolio.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 70vh;
+  height: 73vh;
 }
 
 .portfolio span:nth-of-type(1) {
@@ -46,4 +46,9 @@
   width: 19rem;
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
   border-radius: 19px;
+}
+
+.portfolio img:hover {
+  transform: scale(1.1);
+  transition: .6s;
 }
