--- a/src/Styles/Pages/Notfound.scss
+++ b/src/Styles/Pages/Notfound.scss
@@ -1,9 +1,8 @@
-.notFound {
-  height: 95vh;
-  max-width: 1200px;
+.notFoundContent {
   text-align: center;
-  position: relative;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   h3 {
     margin-bottom: 3rem;
